# rize_fetcher

./: .env.example  CONTRIBUTING.md  LICENSE  README.md  brute_force_bucket.py  config.yaml  explore_schema.py  fetch_data.py  pyproject.toml
.github/workflows/: ci.yaml
tests/: test_fetch_data.py
